--- a/pages/post.html
+++ b/pages/post.html
@@ -1,29 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Submit Button Example</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Multi-Form Example</title>
 </head>
 <body>
 
-  <h2>Sample Form</h2>
+<h2>Upload Files</h2>
 
-  <form action="/submit" method="post">
-    <!-- Your form fields go here -->
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required>
+<form action="/upload" method="post" enctype="multipart/form-data">
+    <label for="file1">File 1:</label>
+    <input type="file" name="file1" id="file1"><br>
 
-    <br>
+    <label for="file2">File 2:</label>
+    <input type="file" name="file2" id="file2"><br>
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
-
-    <br>
-
-    <!-- Submit button -->
-    <input type="submit" value="Submit">
-  </form>
+    <input type="submit" value="Upload">
+</form>
 
 </body>
 </html>
