--- a/pages/4xx.html
+++ b/pages/4xx.html
@@ -26,7 +26,6 @@
 </head>
 <body>
     <div class="error-code">400</div>
-    <div class="error-message">Bad Request (test dir)</div>
-    <p>test dir.</p>
+    <div class="error-message">Bad Request (pages)</div>
 </body>
 </html>
