--- a/pages/test_dir/index.html
+++ b/pages/test_dir/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>pages</title>
+        <title>test dir</title>
     </head>
     <body style="margin:0; background-color: black;color:white;">
         <h1>This is a title</h1>
