--- a/pages/index.html
+++ b/pages/index.html
@@ -8,10 +8,12 @@
         <ul>
             <li>this is workin</li>
             <li>i guess</li>
-            <form action="/tester.py" method="post">
+            <form action="/tester.ph" method="post" enctype="multipart/form-data">
                 <input type="text" name="username">
                 <input type="text" name="password">
                 <input type="submit" value="send">
+                <input type="file" name="uimage">
+                <input type="file" name="ufile">
             </form>
 
             <img src="index.jpeg" >
