--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
         <ul>
             <li>this is workin</li>
             <li>i guess</li>
-            <form action="/tester.ph" method="post" enctype="multipart/form-data">
+            <form action="/tester.py" method="post" enctype="multipart/form-data">
                 <input type="text" name="username">
                 <input type="text" name="password">
                 <input type="submit" value="send">
