--- a/pages/test_dir/index.html
+++ b/pages/test_dir/index.html
@@ -14,7 +14,7 @@
                 <input type="submit" value="send">
             </form>
 
-            <img src="index.jpeg" >
+            <img src="../index.jpeg" >
         </ul>
     </body>
 </html>
